<resources>
    <string name="app_name">GoogleMapping</string>
    <string name="API_key">AIzaSyAXxz3cw4xdEEk-X2YB2vRF5Adj4hsbdaM</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="Output">Output</string>
</resources>
